[package]
name = "kitsune-email"
edition = "2021"
version.workspace = true

[dependencies]
askama = "0.12.0"
askama_axum = "0.3.0" # Damn it, cargo. Because "kitsune" uses "askama" with the axum feature, we have to have the crate available here as well..
lettre = { version = "0.10.4", default-features = false, features = [
    "builder",
    "hostname",
    "pool",
    "smtp-transport",
    "tokio1",
    "tokio1-rustls-tls",
    "tracing",
] }
mrml = { version = "2.0.0-rc3", default-features = false, features = [
    "orderedmap",
    "parse",
    "render",
] }
thiserror = "1.0.44"
typed-builder = "0.15.1"
