[package]
name = "kitsune-embed"
edition = "2021"
version.workspace = true

[dependencies]
diesel = "2.1.0"
diesel-async = "0.3.1"
embed-sdk = { git = "https://github.com/Lantern-chat/embed-service.git", rev = "a2b73a9b24163f20202c9b09857c29137d98708b" }
http = "0.2.9"
kitsune-db = { path = "../kitsune-db" }
kitsune-http-client = { path = "../kitsune-http-client" }
once_cell = "1.18.0"
scraper = { version = "0.16.0", default-features = false }
serde_json = "1.0.97"
smol_str = "0.2.0"
thiserror = "1.0.40"
time = "0.3.22"
typed-builder = "0.14.0"
