[package]
name = "kitsune-embed"
edition = "2021"
version.workspace = true

[dependencies]
diesel = "2.1.0"
diesel-async = "0.3.1"
embed-sdk = { git = "https://github.com/Lantern-chat/embed-service.git", rev = "a2b73a9b24163f20202c9b09857c29137d98708b" }
http = "0.2.9"
iso8601-timestamp = "0.2.11"
kitsune-db = { path = "../kitsune-db" }
kitsune-http-client = { path = "../kitsune-http-client" }
once_cell = "1.18.0"
scraper = { version = "0.17.1", default-features = false }
smol_str = "0.2.0"
thiserror = "1.0.41"
typed-builder = "0.15.0"
