[package]
name = "kitsune-http-client"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.23"
derive_builder = "0.12.0"
http-body = "0.4.5"
hyper = { version = "0.14.24", features = [
    "client",
    "http1",
    "http2",
    "runtime",
] }
hyper-rustls = { version = "0.23.2", features = ["http2"] }
kitsune-http-signatures = { path = "../kitsune-http-signatures" }
serde = "1.0.152"
serde_json = "1.0.91"
tower = "0.4.13"
tower-http = { version = "0.3.5", features = [
    "decompression-full",
    "follow-redirect",
    "map-response-body",
    "timeout",
] }

[dev-dependencies]
tokio = { version = "1.25.0", features = ["macros", "rt"] }
