[package]
name = "kitsune-http-signatures"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.0"
derive_builder = "0.12.0"
http = "0.2.8"
rayon = "1.6.1"
ring = { version = "0.16.20", features = ["std"] }
thiserror = "1.0.38"
tokio = { version = "1.24.2", features = ["sync"] }

[dev-dependencies]
pem = "1.1.1"
pkcs8 = { version = "0.9.0", features = ["alloc"] }
tokio = { version = "1.24.2", features = ["macros", "rt"] }
