[package]
name = "kitsune-http-signatures"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.0"
chrono = "0.4.23"
derive_builder = "0.12.0"
http = "0.2.9"
rayon = "1.7.0"
ring = { version = "0.16.20", features = ["std"] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["sync"] }

[dev-dependencies]
pem = "1.1.1"
pkcs8 = { version = "0.10.1", features = ["alloc"] }
tokio = { version = "1.26.0", features = ["macros", "rt"] }
