[package]
name = "kitsune-http-signatures"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.21.0"
derive_builder = "0.12.0"
http = "0.2.9"
rayon = "1.7.0"
ring = { version = "0.16.20", features = ["std"] }
time = { version = "0.3.21", features = ["formatting", "parsing"] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["sync"] }

[dev-dependencies]
pem = "2.0.1"
pkcs8 = { version = "0.10.2", features = ["alloc"] }
tokio = { version = "1.28.1", features = ["macros", "rt"] }
