[package]
name = "kitsune-job-runner"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[package.metadata.wix]
upgrade-guid = "D61A497C-7468-4A29-B5D3-F9C44E93FF9E"
path-guid = "55D885EF-63AA-4584-9E68-1BF28E6D033A"
license = false
eula = false

[dependencies]
athena = { path = "../lib/athena", features = ["redis"] }
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
color-eyre = "0.6.3"
fred = { workspace = true }
just-retry = { path = "../lib/just-retry" }
kitsune-config = { path = "../crates/kitsune-config" }
kitsune-core = { path = "../crates/kitsune-core" }
kitsune-db = { path = "../crates/kitsune-db" }
kitsune-email = { path = "../crates/kitsune-email" }
kitsune-error = { path = "../crates/kitsune-error" }
kitsune-federation = { path = "../crates/kitsune-federation" }
kitsune-federation-filter = { path = "../crates/kitsune-federation-filter" }
kitsune-jobs = { path = "../crates/kitsune-jobs" }
kitsune-observability = { path = "../crates/kitsune-observability" }
kitsune-service = { path = "../crates/kitsune-service" }
kitsune-url = { path = "../crates/kitsune-url" }
kitsune-wasm-mrf = { path = "../crates/kitsune-wasm-mrf" }
mimalloc = "0.1.41"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
triomphe = "0.1.11"
typed-builder = "0.18.2"

[features]

[lints]
workspace = true
