[package]
name = "kitsune-job-runner"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[package.metadata.wix]
upgrade-guid = "D61A497C-7468-4A29-B5D3-F9C44E93FF9E"
path-guid = "55D885EF-63AA-4584-9E68-1BF28E6D033A"
license = false
eula = false

[dependencies]
athena = { workspace = true }
clap = { workspace = true }
color-eyre = "0.6.3"
fred = { workspace = true }
just-retry = { workspace = true }
kitsune-config = { workspace = true }
kitsune-core = { workspace = true }
kitsune-db = { workspace = true }
kitsune-email = { workspace = true }
kitsune-error = { workspace = true }
kitsune-federation = { workspace = true }
kitsune-federation-filter = { workspace = true }
kitsune-jobs = { workspace = true }
kitsune-observability = { workspace = true }
kitsune-service = { workspace = true }
kitsune-url = { workspace = true }
kitsune-wasm-mrf = { workspace = true }
mimalloc = "0.1.43"
tokio = { version = "1.39.3", features = ["full"] }
tracing = "0.1.40"
triomphe = { workspace = true }
typed-builder = "0.19.1"

[features]

[lints]
workspace = true
