[package]
name = "kitsune-job"
edition = "2021"
version.workspace = true

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
athena = { path = "../lib/athena" }
diesel = "2.1.0"
diesel-async = "0.3.1"
futures-util = "0.3.28"
iso8601-timestamp = "0.2.11"
kitsune-db = { path = "../kitsune-db" }
kitsune-type = { path = "../kitsune-type" }
mimalloc = "0.1.37"
serde = { version = "1.0.164", features = ["derive"] }
speedy-uuid = { version = "0.1.0", path = "../lib/speedy-uuid" }
tokio = { version = "1.29.1", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
