[package]
name = "kitsune-messaging"
version.workspace = true
edition = "2021"

[dependencies]
ahash = "0.8.3"
async-trait = "0.1.68"
futures-util = "0.3.28"
pin-project-lite = "0.2.9"
redis = { version = "0.23.0", features = [
    "aio",
    "connection-manager",
    "tokio-rustls-comp",
] }
serde = "1.0.164"
serde_json = "1.0.96"
tokio = { version = "1.28.2", features = ["macros", "rt", "sync"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing = "0.1.37"
