[package]
name = "kitsune-messaging"
version.workspace = true
edition = "2021"

[dependencies]
ahash = "0.8.3"
async-trait = "0.1.68"
futures-util = "0.3.28"
pin-project-lite = "0.2.9"
redis = { version = "0.23.0", features = [
    "aio",
    "connection-manager",
    "tokio-rustls-comp",
] }
serde = "1.0.164"
simd-json = "0.10.3"
tokio = { version = "1.29.1", features = ["macros", "rt", "sync"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing = "0.1.37"
