[package]
name = "kitsune-messaging"
version.workspace = true
edition = "2021"

[dependencies]
ahash = "0.8.3"
async-trait = "0.1.72"
futures-util = "0.3.28"
pin-project-lite = "0.2.10"
redis = { version = "0.23.1", features = [
    "aio",
    "connection-manager",
    "tokio-rustls-comp",
] }
serde = "1.0.180"
simd-json = "0.10.4"
tokio = { version = "1.29.1", features = ["macros", "rt", "sync"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing = "0.1.37"
