[package]
name = "kitsune-search-server"
version.workspace = true
edition = "2021"

[dependencies]
autometrics = { version = "0.5.0", default-features = false, features = [
    "metrics",
] }
dotenvy = "0.15.7"
envy = "0.4.2"
futures-util = "0.3.28"
human-size = { version = "0.4.3", features = ["serde"] }
jemallocator = { version = "0.5.0", default-features = false, features = [
    "background_threads",
] }
kitsune-search-proto = { path = "proto" }
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
metrics-tracing-context = "0.14.0"
metrics-util = "0.15.1"
prost = "0.11.9"
serde = { version = "1.0.171", features = ["derive"] }
tantivy = "0.20.2"
time = "0.3.23"
tokio = { version = "1.29.1", features = ["full"] }
tonic = "0.9.2"
tonic-health = "0.9.2"
tower-http = { version = "0.4.1", features = ["add-extension", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[features]

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.6.0"
