[package]
name = "kitsune-search-server"
version.workspace = true
edition.workspace = true

[dependencies]
autometrics = { version = "0.6.0", default-features = false, features = [
    "metrics",
] }
dotenvy = "0.15.7"
envy = "0.4.2"
futures-util = "0.3.28"
human-size = { version = "0.4.3", features = ["serde"] }
tikv-jemallocator = { version = "0.5.4", default-features = false, features = [
    "background_threads",
] }
kitsune-search-proto = { path = "proto" }
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
metrics-tracing-context = "0.14.0"
metrics-util = "0.15.1"
prost = "0.11.9"
serde = { version = "1.0.188", features = ["derive"] }
tantivy = "0.20.2"
time = "0.3.28"
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.9.2"
tonic-health = "0.9.2"
tower-http = { version = "0.4.3", features = ["add-extension", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[features]

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.8.0"
