[package]
name = "kitsune-search-server"
version.workspace = true
edition.workspace = true

[dependencies]
autometrics = { version = "0.6.0", default-features = false, features = [
    "metrics",
] }
dotenvy = "0.15.7"
envy = "0.4.2"
futures-util = "0.3.28"
human-size = { version = "0.4.3", features = ["serde"] }
kitsune-search-proto = { path = "proto" }
metrics = "0.21.1"
metrics-exporter-prometheus = "0.12.1"
metrics-tracing-context = "0.14.0"
metrics-util = "0.15.1"
mimalloc = "0.1.39"
prost = "0.12.1"
serde = { version = "1.0.188", features = ["derive"] }
tantivy = "0.21.0"
time = "0.3.29"
tokio = { version = "1.32.0", features = ["full"] }
tonic = "0.10.1"
tonic-health = "0.10.1"
tower-http = { version = "0.4.4", features = ["add-extension", "trace"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"

[features]

[dev-dependencies]
rand = "0.8.5"
tempfile = "3.8.0"
