[package]
name = "kitsune-search"
edition = "2021"
version.workspace = true

[dependencies]
async-trait = "0.1.68"
diesel = "2.1.0"
diesel-async = "0.3.0"
diesel_full_text_search = { version = "2.1.0", default-features = false }
enum_dispatch = "0.3.11"
futures-util = "0.3.28"
kitsune-db = { path = "../kitsune-db" }
serde = { version = "1.0.163", features = ["derive"] }
strum = { version = "0.24.1", features = ["derive"] }
thiserror = "1.0.40"
uuid = "1.3.3"

# "kitsune-search" feature
kitsune-search-proto = { path = "../kitsune-search-server/proto", optional = true }
tonic = { version = "0.9.2", optional = true }

# "meilisearch" feature
meilisearch-sdk = { version = "0.23.2", optional = true }
tracing = "0.1.37"

[features]
default = []
kitsune-search = ["dep:kitsune-search-proto", "dep:tonic"]
meilisearch = ["dep:meilisearch-sdk"]
