[package]
name = "kitsune-storage"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
aws-sdk-s3 = "0.26.0"
aws-smithy-http = "0.55.2"
bytes = "1.4.0"
enum_dispatch = "0.3.11"
futures-util = "0.3.28"
http = "0.2.9"
http-body = "0.4.5"
pin-project-lite = "0.2.9"
sync_wrapper = "0.1.2"
tokio = { version = "1.28.0", features = ["fs", "io-util"] }
tokio-util = { version = "0.7.8", features = ["io"] }

[dev-dependencies]
aws-credential-types = { version = "0.55.1", features = [
    "hardcoded-credentials",
] }
tempfile = "3.5.0"
tokio = { version = "1.28.0", features = ["macros", "rt"] }
