[package]
name = "kitsune-storage"
version.workspace = true
edition = "2021"

[dependencies]
async-trait = "0.1.73"
aws-sdk-s3 = "0.29.0"
aws-smithy-http = "0.56.0"
bytes = "1.4.0"
enum_dispatch = "0.3.12"
futures-util = "0.3.28"
http = "0.2.9"
http-body = "0.4.5"
pin-project-lite = "0.2.12"
sync_wrapper = "0.1.2"
tokio = { version = "1.31.0", features = ["fs", "io-util"] }
tokio-util = { version = "0.7.8", features = ["io"] }

[dev-dependencies]
aws-credential-types = { version = "0.56.0", features = [
    "hardcoded-credentials",
] }
tempfile = "3.7.1"
tokio = { version = "1.31.0", features = ["macros", "rt"] }
