[package]
name = "kitsune-type"
version.workspace = true
edition = "2021"

[dependencies]
iso8601-timestamp = "0.2.11"
serde = { version = "1.0.166", features = ["derive"] }
simd-json = "0.10.3"
smol_str = { version = "0.2.0", features = ["serde"] }
speedy-uuid = { path = "../lib/speedy-uuid" }
utoipa = { version = "3.3.0", features = ["chrono", "uuid"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
