[package]
name = "kitsune-uuid"
edition = "2021"
version.workspace = true

[dependencies]
async-graphql = { version = "5.0.10", default-features = false, optional = true }
diesel = { version = "2.1.0", features = ["postgres_backend", "uuid"] }
serde = "1.0.164"
thiserror = "1.0.40"
uuid = { version = "1.3.4", features = ["fast-rng", "v7"] }
uuid-simd = { version = "0.8.0", features = ["uuid"] }
