[package]
name = "kitsune"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/kitsune-soc/kitsune"
homepage = "https://joinkitsune.org"
build = "build.rs"

[package.metadata.wix]
upgrade-guid = "560454A1-C372-48A1-9AA7-D41DB3D63E12"
path-guid = "1C91B087-D09B-42C2-B413-208E775781E2"
license = false
eula = false

[dependencies]
athena.workspace = true
arc-swap = "1.7.1"
argon2 = { version = "0.5.3", features = ["std"] }
async-trait = "0.1.83"
axum = { version = "0.7.9", features = ["macros", "multipart"] }
axum-extra = { version = "0.9.6", features = [
    "cookie",
    "cookie-signed",
    "query",
    "typed-header",
] }
axum-flash = "0.8.0"
blowocking.workspace = true
bytes = "1.9.0"
chrono = { version = "0.4.38", default-features = false }
clap.workspace = true
color-eyre = "0.6.3"
cursiv = { workspace = true, features = ["axum"] }
diesel.workspace = true
diesel-async.workspace = true
futures-util.workspace = true
headers = "0.4.0"
http.workspace = true
http-body-util = "0.1.2"
http-signatures.workspace = true
iso8601-timestamp.workspace = true
itertools.workspace = true
kitsune-activitypub.workspace = true
kitsune-cache.workspace = true
kitsune-captcha.workspace = true
kitsune-config.workspace = true
kitsune-core.workspace = true
kitsune-db.workspace = true
kitsune-derive.workspace = true
kitsune-email.workspace = true
kitsune-embed.workspace = true
kitsune-error.workspace = true
kitsune-federation.workspace = true
kitsune-federation-filter.workspace = true
kitsune-http-client.workspace = true
kitsune-job-runner.workspace = true
kitsune-jobs.workspace = true
kitsune-language.workspace = true
kitsune-observability.workspace = true
kitsune-search.workspace = true
kitsune-service.workspace = true
kitsune-storage.workspace = true
kitsune-type.workspace = true
kitsune-url.workspace = true
kitsune-util.workspace = true
kitsune-wasm-mrf.workspace = true
kitsune-webfinger.workspace = true
mimalloc = "0.1.43"
mime = "0.3.17"
mime_guess = { version = "2.0.5", default-features = false }
minijinja.workspace = true
notify-debouncer-full = "0.4.0"
oxide-auth = "0.6.1"
oxide-auth-async = "0.2.1"
oxide-auth-axum = "0.5.0"
rust-embed = { version = "8.5.0", features = ["include-exclude"] }
scoped-futures = "0.1.4"
serde.workspace = true
serde_urlencoded = "0.7.1"
sonic-rs.workspace = true
simdutf8.workspace = true
speedy-uuid.workspace = true
strum = { version = "0.26.3", features = ["derive"] }
tempfile = "3.14.0"
time = "0.3.36"
tokio.workspace = true
tokio-util = { version = "0.7.12", features = ["io"] }
tower = { version = "0.5.1", features = ["util"] }
tower-stop-using-brave.workspace = true
tower-x-clacks-overhead.workspace = true
tower-http = { version = "0.6.2", features = [
    "catch-panic",
    "cors",
    "fs",
    "request-id",
    "timeout",
    "trace",
] }
tower-http-digest.workspace = true
tracing.workspace = true
trials.workspace = true
triomphe.workspace = true
typed-builder.workspace = true
url.workspace = true

# --- Optional dependencies ---

# "graphql" feature
async-graphql = { workspace = true, optional = true }
async-graphql-axum = { version = "7.0.11", optional = true }

# "mastodon-api" feature
kitsune-mastodon = { workspace = true, optional = true }

# "oidc" feature
kitsune-oidc = { workspace = true, optional = true }

[dev-dependencies]
kitsune-http-client.workspace = true
kitsune-test.workspace = true
fred.workspace = true

[features]
default = ["graphql-api", "mastodon-api", "oidc"]
graphql-api = [
    "dep:async-graphql",
    "dep:async-graphql-axum",
    "speedy-uuid/async-graphql",
]
mastodon-api = ["dep:kitsune-mastodon"]
oidc = ["dep:kitsune-oidc"]

[lints]
workspace = true
