[package]
name = "kitsune"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository = "https://github.com/kitsune-soc/kitsune"
homepage = "https://joinkitsune.org"
build = "build.rs"

[package.metadata.wix]
upgrade-guid = "560454A1-C372-48A1-9AA7-D41DB3D63E12"
path-guid = "1C91B087-D09B-42C2-B413-208E775781E2"
license = false
eula = false

[dependencies]
athena.workspace = true
arc-swap.workspace = true
argon2.workspace = true
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
axum-flash.workspace = true
blowocking.workspace = true
bytes.workspace = true
chrono.workspace = true
clap.workspace = true
color-eyre.workspace = true
cursiv.workspace = true
diesel.workspace = true
diesel-async.workspace = true
futures-util.workspace = true
headers.workspace = true
http.workspace = true
http-body-util.workspace = true
http-signatures.workspace = true
iso8601-timestamp.workspace = true
itertools.workspace = true
kitsune-activitypub.workspace = true
kitsune-cache.workspace = true
kitsune-captcha.workspace = true
kitsune-config.workspace = true
kitsune-core.workspace = true
kitsune-db.workspace = true
kitsune-derive.workspace = true
kitsune-email.workspace = true
kitsune-embed.workspace = true
kitsune-error.workspace = true
kitsune-federation.workspace = true
kitsune-federation-filter.workspace = true
kitsune-http-client.workspace = true
kitsune-job-runner.workspace = true
kitsune-jobs.workspace = true
kitsune-language.workspace = true
kitsune-observability.workspace = true
kitsune-search.workspace = true
kitsune-service.workspace = true
kitsune-storage.workspace = true
kitsune-type.workspace = true
kitsune-url.workspace = true
kitsune-util.workspace = true
kitsune-wasm-mrf.workspace = true
kitsune-webfinger.workspace = true
mimalloc.workspace = true
mime.workspace = true
mime_guess.workspace = true
minijinja.workspace = true
notify-debouncer-full.workspace = true
rust-embed.workspace = true
scoped-futures.workspace = true
serde.workspace = true
serde_urlencoded.workspace = true
sonic-rs.workspace = true
simdutf8.workspace = true
speedy-uuid.workspace = true
strum.workspace = true
tempfile.workspace = true
time.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower.workspace = true
tower-stop-using-brave.workspace = true
tower-x-clacks-overhead.workspace = true
tower-http.workspace = true
tower-http-digest.workspace = true
tracing.workspace = true
trials.workspace = true
triomphe.workspace = true
typed-builder.workspace = true
url.workspace = true

# --- Optional dependencies ---

# "graphql" feature
async-graphql = { workspace = true, optional = true }
async-graphql-axum = { workspace = true, optional = true }

# "mastodon-api" feature
kitsune-mastodon = { workspace = true, optional = true }

# "oidc" feature
kitsune-oidc = { workspace = true, optional = true }

[dev-dependencies]
kitsune-http-client.workspace = true
kitsune-test.workspace = true
fred.workspace = true

[features]
default = ["graphql-api", "mastodon-api", "oidc"]
graphql-api = [
    "dep:async-graphql",
    "dep:async-graphql-axum",
    "speedy-uuid/async-graphql",
]
mastodon-api = ["dep:kitsune-mastodon"]
oidc = ["dep:kitsune-oidc"]

[lints]
workspace = true
