[package]
name = "post-process"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.26"
pest = "2.5.5"
pest_derive = "2.5.5"

[dev-dependencies]
insta = { version = "1.28.0", features = ["glob"] }
pretty_assertions = "1.3.0"
tokio = { version = "1.25.0", features = ["macros", "rt"] }
