[package]
name = "post-process"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.27"
pest = "2.5.6"
pest_derive = "2.5.6"

[dev-dependencies]
insta = { version = "1.28.0", features = ["glob"] }
pretty_assertions = "1.3.0"
tokio = { version = "1.26.0", features = ["macros", "rt"] }
