[package]
name = "post-process"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.28"
pest = "2.6.0"
pest_derive = "2.6.0"

[dev-dependencies]
insta = { version = "1.29.0", features = ["glob"] }
pretty_assertions = "1.3.0"
tokio = { version = "1.28.1", features = ["macros", "rt"] }
