[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
argh = "0.1.12"
eyre = "0.6.12"
sonic-rs.workspace = true
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "ansi",
    "fmt",
] }
ureq = "2.11.0"

[lints]
workspace = true
