[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
argh = "0.1.12"
eyre.workspace = true
sonic-rs.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3.19", default-features = false, features = [
    "ansi",
    "fmt",
] }
ureq = "2.11.0"

[lints]
workspace = true
