[package]
name = "xtask"
version = "0.0.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
argh.workspace = true
eyre.workspace = true
sonic-rs.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ureq.workspace = true

[lints]
workspace = true
