[package]
name = "kitsune-activitypub"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1.83"
base64-simd = "0.8.0"
diesel = { workspace = true }
diesel-async = { workspace = true }
futures-util = "0.3.31"
headers = "0.4.0"
http = "1.1.0"
iso8601-timestamp = { workspace = true }
kitsune-cache = { workspace = true }
kitsune-config = { workspace = true }
kitsune-core = { workspace = true }
kitsune-db = { workspace = true }
kitsune-embed = { workspace = true }
kitsune-error = { workspace = true }
kitsune-federation-filter = { workspace = true }
kitsune-http-client = { workspace = true }
kitsune-language = { workspace = true }
kitsune-search = { workspace = true }
kitsune-service = { workspace = true }
kitsune-type = { workspace = true }
kitsune-url = { workspace = true }
kitsune-util = { workspace = true }
kitsune-wasm-mrf = { workspace = true }
mime = "0.3.17"
mime_guess = { version = "2.0.5", default-features = false }
serde = "1.0.215"
sha2 = "0.10.8"
sonic-rs = { workspace = true }
speedy-uuid = { workspace = true }
tracing = "0.1.41"
triomphe = { workspace = true }
typed-builder = "0.20.0"
url = "2.5.4"

[target.'cfg(not(target_env = "msvc"))'.dependencies]
sha2 = { version = "0.10.8", features = ["asm"] }

[dev-dependencies]
http-body-util = "0.1.2"
hyper = "1.5.1"
kitsune-config = { workspace = true }
kitsune-test = { workspace = true }
kitsune-webfinger = { workspace = true }
pretty_assertions = "1.4.1"
tokio = { workspace = true, features = ["macros"] }
tower = { version = "0.5.1", default-features = false, features = ["util"] }

[lints]
workspace = true
