[package]
name = "kitsune-activitypub"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
base64-simd.workspace = true
diesel.workspace = true
diesel-async.workspace = true
futures-util.workspace = true
headers.workspace = true
http.workspace = true
iso8601-timestamp.workspace = true
kitsune-cache.workspace = true
kitsune-config.workspace = true
kitsune-core.workspace = true
kitsune-db.workspace = true
kitsune-embed.workspace = true
kitsune-error.workspace = true
kitsune-federation-filter.workspace = true
kitsune-http-client.workspace = true
kitsune-language.workspace = true
kitsune-search.workspace = true
kitsune-service.workspace = true
kitsune-type.workspace = true
kitsune-url.workspace = true
kitsune-util.workspace = true
kitsune-wasm-mrf.workspace = true
mime.workspace = true
mime_guess.workspace = true
serde.workspace = true
sha2.workspace = true
sonic-rs.workspace = true
speedy-uuid.workspace = true
tracing.workspace = true
triomphe.workspace = true
typed-builder.workspace = true
url.workspace = true

[dev-dependencies]
http-body-util.workspace = true
hyper.workspace = true
kitsune-config.workspace = true
kitsune-test.workspace = true
kitsune-webfinger.workspace = true
pretty_assertions.workspace = true
tokio.workspace = true
tower.workspace = true

[lints]
workspace = true
