[package]
name = "kitsune-blocking"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
once_cell = "1.19.0"
rayon = "1.8.1"
thiserror = "1.0.56"
tokio = { version = "1.35.1", features = ["rt", "sync"] }
tracing = "0.1.40"

[lints]
workspace = true
