[package]
name = "kitsune-cache"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
enum_dispatch = "0.3.13"
fred = { workspace = true }
kitsune-error = { workspace = true }
moka = { workspace = true }
serde = "1.0.210"
sonic-rs = { workspace = true }
tracing = "0.1.40"
triomphe = { workspace = true }
typed-builder = "0.20.0"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["macros", "rt"] }

[lints]
workspace = true
