[package]
name = "kitsune-cache"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
enum_dispatch = "0.3.13"
fred.workspace = true
kitsune-error.workspace = true
moka.workspace = true
serde.workspace = true
sonic-rs.workspace = true
tracing.workspace = true
triomphe.workspace = true
typed-builder.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
