[package]
name = "kitsune-captcha"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
enum_dispatch = "0.3.13"
http.workspace = true
kitsune-error.workspace = true
kitsune-http-client.workspace = true
serde.workspace = true
serde_urlencoded = "0.7.1"
sonic-rs.workspace = true
strum.workspace = true
typed-builder.workspace = true

[lints]
workspace = true
