[package]
name = "kitsune-config"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
eyre = "0.6.12"
human-size = { version = "0.4.3", features = ["serde"] }
isolang = { version = "2.4.0", features = ["serde"] }
serde = { version = "1.0.204", features = ["derive"] }
smol_str = { version = "0.2.2", features = ["serde"] }
tokio = { version = "1.38.0", features = ["fs"] }
toml = { version = "0.8.14", default-features = false, features = ["parse"] }

[lints]
workspace = true
