[package]
name = "kitsune-config"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
eyre.workspace = true
human-size = { version = "0.4.3", features = ["serde"] }
isolang.workspace = true
serde.workspace = true
smol_str.workspace = true
tokio.workspace = true
toml.workspace = true

[lints]
workspace = true
