[package]
name = "kitsune-core"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
const_format = "0.2.33"
git-version = "0.3.9"
kitsune-db.workspace = true
kitsune-error.workspace = true
paste = "1.0.15"
serde.workspace = true
triomphe.workspace = true
typed-builder.workspace = true
unsize = "1.1.0"

[lints]
workspace = true
