[package]
name = "kitsune-core"
authors.workspace = true
edition.workspace = true
version.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
const_format.workspace = true
git-version.workspace = true
kitsune-db.workspace = true
kitsune-error.workspace = true
paste.workspace = true
serde.workspace = true
triomphe.workspace = true
typed-builder.workspace = true
unsize.workspace = true

[lints]
workspace = true
